gcc/testsuite/g++.dg/modules/atom-decl-1.C
// { dg-additional-options "-fmodules-ts" }
int i;

module thing; // { dg-error "expected" }
